--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,15 +1,40 @@
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(
         to right bottom,
     rgba($color-primary-light ,0.8),
     rgba($color-primary-dark ,0.8)),
-    url(../img/hero.jpg); 
+    url(../img/hero-small.jpg); 
     background-size: cover;
-    -webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100% );
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% );
     position: relative;
-    &__log-box {
+
+
+    
+
+    @supports (clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% )) or  (-webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100% )) {
+        -webkit-clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100% );
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100% );
+        height: 95vh;
+    }
+
+    @media 
+    (min-resolution: 192dpi) and (min-width:37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width:37.5em),
+    (min-width: 125em)  { // , functions as an or 
+        background-image: linear-gradient(
+        to right bottom,
+    rgba($color-primary-light ,0.8),
+    rgba($color-primary-dark ,0.8)),
+    url(../img/hero.jpg); 
+    }
+
+
+    @include respond(phone) {
+        -webkit-clip-path:polygon(0 0, 100% 0, 100% 85vh, 0 100% );
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100% );
+    }
+
+    &__logo-box {
         position: absolute;
         top: 4rem; 
         left: 4rem
@@ -17,7 +42,7 @@
     &__logo {
         height: 3.5rem;
         padding-left: 1rem;
-        padding-top: 1rem;
+        
     }
     &__text-box {
         position: absolute;
@@ -31,24 +56,4 @@
 
 
 
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    margin-bottom: 6rem;
 
-    &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 700;
-        letter-spacing: 4.2rem;
-        padding-left: 2rem;
-        animation: moveInLeft 1s
-    }
-    &--sub{
-        display: block;
-        font-size: 2.5rem;
-        font-weight: 700;
-        letter-spacing: 1.7rem;
-        animation: moveInRight 1s
-    }
-}
