--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -18,18 +22,30 @@
     & > * { // selects all the elements in the section-features
         transform: skewY(5deg);
     }
+
+    @include respond(tab-port) {
+        padding: 15rem 0;
+    }
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 25rem 0 20rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
+
+    @include respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 
 .section-stories {
     position: relative;
-    padding: 10rem 0;
+    padding: 15rem 0;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
  
 }
 
@@ -37,6 +53,10 @@
 .section-book {
     padding: 15rem 0;
     background: $color-primary-dark;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
     
 }
 
@@ -51,10 +71,34 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black ,0.2);
 
-    height: 50rem;
+
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg,
+     rgba($color-white, .9) 0%,
+     rgba($color-white, .9) 65%,
+     transparent 65%),
+     url(../img/nat-10.jpg);
+     background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right,
+     rgba($color-white, .9) 0%,
+     rgba($color-white, .9) 100%);
+    }
+
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
     }
 }
