--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -25,4 +25,5 @@ $color-black: #000;
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 5rem;
 $gutter-horizontal: 6rem;
