--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,46 @@
+body {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;    
+    line-height: 1.7;
+    color: $color-grey-dark;
+    
+
+}
+
+
+.heading-primary {
+    color: $color-white;
+    text-transform: uppercase;
+    margin-bottom: 6rem;
+
+    &--main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 700;
+        letter-spacing: 4.2rem;
+        padding-left: 2rem;
+        animation: moveInLeft 1s;
+
+    @include respond(phone) { 
+        letter-spacing: 1rem;
+        font-size: 5rem;
+    }
+}
+    &--sub{
+        display: block;
+        font-size: 2.5rem;
+        font-weight: 700;
+        letter-spacing: 1.7rem;
+        animation: moveInRight 1s;
+
+        @include respond(phone) { 
+            letter-spacing: .5rem;
+            font-size: 3rem;
+
+        }
+    }
+}
+
 .heading-secondary {
     font-size: 3.5rem;
     text-transform: uppercase;
@@ -9,6 +52,14 @@
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    @include respond(tab-port) { 
+        font-size: 3rem;
+    }
+
+    @include respond(phone) { 
+        font-size: 2.5rem;
+    }
     
     &:hover {
         transform: scale(1.1);
