--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -6,20 +6,44 @@
         position: absolute;
         transition: all .2s;
         outline-offset: 2rem;
-        
+        z-index: 1;
+
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.33%;
+        }
         &--p1 {
             left: 0;
             top: -2rem;
+
+            @include respond(tab-port) {
+                top: 6rem;
+                transform: scale(1.4);
+            }
         }
 
         &--p2 {
             right: 0;
             top: 2rem;
+
+            @include respond(tab-port) {
+                top: 0rem;
+                transform: scale(1.5);
+            }
         }
 
         &--p3 {
             left: 20%;
             top: 10rem;
+
+            @include respond(tab-port) {
+                top: 6rem;
+                left: 0%;
+                transform: scale(1.4);
+                z-index: 0;
+
+            }
         }
 
         &:hover {
