--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,14 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .2s ease-out;
     
+    @include respond(tab-port) {
+        padding: 10rem;
+    }
+
+    @include respond(phone) {
+        padding: 5rem;
+    }
+
     & i {
         font-size: 6rem;
         margin-bottom: .5rem;
