--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,12 @@
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    
+
+    @supports ( -webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+    }
 
     &:target {
         opacity: 1;
@@ -41,12 +47,24 @@
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
         border-radius: 3px;
         display: table;
+
         overflow: hidden;
+
+      
     }
 
     &__left {
-        width: 33.333333%;
+        width: 45%;
         display: table-cell;
+        object-fit: cover;
+        height: fit-content;
+
+        @include respond (tab-land){
+            display: none;
+            
+            
+        }
+
     }
 
     &__right {
@@ -55,6 +73,10 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        
+       
+       
+       
         
     }
 
