--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,10 +4,14 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+  
 
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-port) {
+            margin-bottom: 4rem;
+        }
     }
 
     &__logo{
@@ -20,6 +24,10 @@
         padding-top: 2rem;
         display: inline-block;
         
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -58,7 +66,14 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
+
+    
 
 
 }
