--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -157,7 +157,8 @@
         font-weight: 300;
     }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),  
+    only screen and (hover:none){  // to account for touch devices so they can actually click the book now button
         
         height: auto;
         border-radius: 3px;
